--- a/content/cn/2020-09-25-dna.md
+++ b/content/cn/2020-09-25-dna.md
@@ -12,7 +12,7 @@ tags: []
 
 我觉得好的科研工作应该是基础且新奇的，但基础和新奇这两个标准有点互斥---越基础的东西往往被研究得越久，越细，因此，要在被前人筛了又筛的“基础”领域里发现点“新奇”的东西也就越难。基础而新奇的发现在某种意义上说是可遇而不可求的，而顾南新发表的工作就属此类---她发现，DNA 损伤可以在苔藓植物小立碗藓里诱导出干细胞来。在顾南的研究出现之前，任何具有基本生物常识的人都不会把 DNA 损伤跟干细胞的形成正面地联系起来。这是个值得一叙的旅程。    
 
-大概在 2013 年，顾南作为华中农业大学的交流学生来到我所在的实验室。当时，她来交流的目的是研究拓扑异构酶在苔藓再生（是啥）过程中的作用，是一个短期的访问。       
+大概在 2013 年，顾南作为华中农业大学的交流学生来到我所在的实验室。当时，她来交流的目的是研究拓扑异构酶在苔藓再生过程中的作用，是一个短期的访问。       
 
 拓扑异构酶是一个上了生物教科书的酶，它参与了改变 DNA 双链在复制等过程中产生的纽结。想象你拿两条绳子绕起来拧麻花，越拧绳子间形成的纽结就越多，整条绳子就会因内部的扭力而卷起来。如何释放这纽结产生的力呢？拓扑异构酶干的就是这活儿。它把绳子中的一股给剪断，让其松开一圈再接起来，那样链间的扭力就会减小。切和接，这是拓扑异构酶行使功能的关键。由于这个功能对生物的生存是如此重要，所以很早就被研究得十分清楚了，且所有分子生物学教科书都会讲到这部分内容。   
 
@@ -30,7 +30,15 @@ tags: []
 
 有了这么精彩的研究结果，顾南的短期访问也变成了和我们实验室的长期合作研究。在接下来的几年里，顾南用美丽的彗星实验弄清楚了 DNA 损伤的出现和修复的动态过程；评估了损伤响应因子 ATM 和 ATR 在这个过程中其的作用，并确定了 ATR 是 DNA 损伤响应诱导再生这个过程中不可或缺的因子；还用实验明确了机械损伤诱导的再生和 DNA 损伤诱导的再生在分子机制上的异同。这些一环扣一环的清晰结果勾画出了 DNA 损伤诱导再生这个顾南新发现的现象的概貌，为这个新领域以后的研究打了坚实的基础。    
 
-DNA 损伤诱导可以诱导干细胞的形成，虽然我知道这个结论已经有几年的时间了，但现在想起来，依然有一种活久见的感觉。不得不感叹生物世界的神奇。所谓 DNA 损伤，其实在 DNA 分子层面发生的事情是一些列化学键的断开和再连接，“损伤”是人类给上的价值。我们通过有限的认知来给 DNA 分子上发生的事件评价好与坏，但顾南的发现告诉我们，事情并不如此简单。DNA 化学键的断开和再连接会开启细胞再生的历程。多年千，沃森和克里克发现生命的密码存在于 DNA 链中，但我想，即使是他们怕也未必能想见，这个密码箱上裂个小扣子居然能直接影响细胞的命运。至于这是如何一步一步发生的，让我们拭目以待顾南未来的工作吧。   
+DNA 损伤诱导可以诱导干细胞的形成，虽然我知道这个结论已经有几年的时间了，但现在想起来，依然有一种活久见的感觉。不得不感叹生物世界的神奇。所谓 DNA 损伤，其实在 DNA 分子层面发生的事情是一些列化学键的断开和再连接，“损伤”是人类给上的价值。我们通过有限的认知来给 DNA 分子上发生的事件评价好与坏，但顾南的发现告诉我们，事情并不如此简单。DNA 化学键的断开和再连接会开启细胞再生的历程。多年千，沃森和克里克发现生命的密码存在于 DNA 链中，但我想，即使是他们怕也未必能想见，这个密码箱上裂个小扣子居然能直接影响细胞的命运。至于这是如何一步一步发生的，让我们拭目以待顾南未来的工作吧。     
+
+------------
+
+说到最后，拓扑异构酶去哪儿了？  
+
+稍微剧透一下吧。顾南在研究 DNA 损伤诱导干细胞这个现象的同时也没有放弃拓扑异构酶的工作。她经过细心的观察，发现拓扑异构酶的一个突变体无法进行正常的世代交替，于是她一路追踪，揭开了苔藓精细胞形成中同步化维持机制的面纱。  
+
+
 
 
 
