--- a/content/cn/2020-09-25-dna.md
+++ b/content/cn/2020-09-25-dna.md
@@ -30,7 +30,7 @@ tags: []
 
 有了这么精彩的研究结果，顾南的短期访问也变成了和我们实验室的长期合作研究。在接下来的几年里，顾南用美丽的彗星实验弄清楚了 DNA 损伤的出现和修复的动态过程；评估了损伤响应因子 ATM 和 ATR 在这个过程中其的作用，并确定了 ATR 是 DNA 损伤响应诱导再生这个过程中不可或缺的因子；还用实验明确了机械损伤诱导的再生和 DNA 损伤诱导的再生在分子机制上的异同。这些一环扣一环的清晰结果勾画出了 DNA 损伤诱导再生这个顾南新发现的现象的概貌，为这个新领域以后的研究打了坚实的基础。    
 
-DNA 损伤诱导可以诱导干细胞的形成，虽然我知道这个结论已经有几年的时间了，但现在想起来，依然有一种活久见的感觉。不得不感叹生物世界的神奇。所谓 DNA 损伤，其实在 DNA 分子层面发生的事情是一些列化学键的断开和再连接，“损伤”是人类给上的价值。我们通过有限的认知来给 DNA 分子上发生的事件评价好与坏，但顾南的发现告诉我们，事情并不如此简单。DNA 化学键的断开和再连接会开启细胞再生的历程。多年千，沃森和克里克发现生命的密码存在于 DNA 链中，但我想，即使是他们怕也未必能想见，这个密码箱上裂个小扣子居然能直接影响细胞的命运。至于这是如何一步一步发生的，让我们拭目以待顾南未来的工作吧。     
+DNA 损伤诱导可以诱导干细胞的形成，虽然我知道这个结论已经有几年的时间了，但现在想起来，依然有一种活久见的感觉。不得不感叹生物世界的神奇。所谓 DNA 损伤，其实在 DNA 分子层面发生的事情是一些列化学键的断开和再连接，“损伤”是人类给上的价值。我们通过有限的认知来给 DNA 分子上发生的事件评价好与坏，但顾南的发现告诉我们，事情并不如此简单---DNA 化学键的断开和再连接会开启细胞再生的历程。多年前，沃森和克里克发现生命的密码存在于 DNA 链中，我想，即使是他们怕也未必能想见，这个密码箱上裂个小口子居然能直接改变细胞的命运，让植物重启新生。这是如何一步一步发生的，让我们期待顾南未来的工作吧。     
 
 ------------
 
