--- a/content/cn/2020-09-25-dna.md
+++ b/content/cn/2020-09-25-dna.md
@@ -20,17 +20,17 @@ tags: []
 
 在我看来，她当年带来的这个课题并没有太大的意思。首先，拓扑异构酶跟苔藓的再生是否有关系还有待确定。其次，拓扑异构酶是一个功能如此基本的酶，即使发现它跟再生有关系，但这个关系是否是直接的也不好说。最后，由于拓扑异构酶在分子层面的功能我们都已了解得非常详细了，所以即使确定了拓扑异构酶跟苔藓的再生有直接关系，那其在分子层面上涉及的机制恐怕也难逃前人已有的研究内容，很难在分子机制上有新的发现。现在回看，事实证明当时的这些判断是对的，但顾南的神奇之处就在于，她能在无路处自己开创一片新领域来。   
 
-要研究一个蛋白是否参与了某个再生的过程，一般的做法是消除或抑制这个蛋白的功能，然后看植物的再生能力是否有变化。我们可以从植物基因组里删除掉编码该蛋白的基因或用化学物质来抑制掉该蛋白的功能。在小立碗藓的基因组里有两个基因编码拓扑异构酶I，顾南发现光删除掉其中一个的话，苔藓的再生能力不会受到影响；而如果把两个基因都删除掉，那苔藓根本就活不了，也无从研究它在再生里的功能了。好在天无绝人之路，拓扑异构酶I有个特异抑制剂，喜树碱。喜树碱会与拓扑异构酶I蛋白结合，阻止拓扑异构酶I剪断 DNA 链后再将其连接起来，从而让拓扑异构酶不能正常工作。这也是研究拓扑异构酶功能的好工具。顾南用喜树碱处理苔藓的离体叶片，看与对照组比较，处理组的再生能力是否有改变。这个实验显示，对照组的叶片仅在受伤的切口处产生干细胞，而处理组的叶片处理切口处产生了干细胞外，在叶片内部的未受损处也出现了干细胞。看起来喜树碱处理增强了苔藓离体叶片形成干细胞的能力。这个结果可以说出乎了所有人意外，因为一般来说，拓扑异构酶被抑制以后，细胞的 DNA 复制等基本生理功能就难以顺利完成，所以细胞分裂等过程也会被抑制；干细胞是可以分裂的细胞，若拓扑异构酶功能被抑制，我们预期干细胞的形成应该也被抑制。然而事实正好与预期相反。         
+要研究一个蛋白是否参与了再生的过程，一般的做法是消除或抑制这个蛋白的功能，然后看植物的再生能力是否有变化。我们可以从植物基因组里删除掉编码该蛋白的基因或用化学物质来抑制掉该蛋白的功能。在小立碗藓的基因组里有两个基因编码拓扑异构酶I，顾南发现光删除掉其中一个的话，苔藓的再生能力不会受到影响；而如果把两个基因都删除掉，那苔藓根本就活不了，也无从研究它在再生里的功能了。好在天无绝人之路，拓扑异构酶I有个特异抑制剂，喜树碱。喜树碱会与拓扑异构酶I蛋白结合，在拓扑异构酶I剪断 DNA 链后阻止其连接起来，从而破坏了拓扑异构酶原本的功能设定。这也是研究拓扑异构酶功能的好工具。顾南用喜树碱处理苔藓的离体叶片，看与对照组比较，处理组的再生能力是否有变化。这个实验显示，对照组的叶片仅在受伤的切口处产生干细胞，而处理组的叶片除了切口处产生了干细胞外，在叶片内部的未受损处也出现了干细胞。看起来喜树碱处理增强了苔藓离体叶片形成干细胞的能力。这个结果可以说出乎了所有人意外，因为一般来说，拓扑异构酶被抑制以后，细胞的 DNA 复制等基本生理功能就难以顺利完成，所以细胞分裂等过程也会被抑制；干细胞是可以分裂的细胞，若拓扑异构酶功能被抑制，我们原本预期干细胞的形成应该也被抑制。然而事实正好与预期相反。         
 
-在研究工作中，出乎意料的情况发生的时候往往也是最令人兴奋的时候。难道抑制拓扑异构酶的功能可以增加植物形成干细胞的能力？这是个惊人但合理的假设。但顾南的思路更野，她提了另一个更惊世骇俗的可能。她说干细胞能力的增加或许和拓扑异构酶本身的功能无关，而是由于喜树碱造成的 DNA 损伤引起的。如之前所说，喜树碱结合拓扑异构酶后，拓扑异构酶能切割 DNA，但不再能将切断的 DNA 连起来，于是就造成了 DNA 链的断裂。喜树碱处理会导致 DNA 损伤，这是很多人都知道的，但没有一个人会提出 DNA 链的损伤会增加干细胞形成的能力，除了顾南。因为常识阻止我们把 DNA 损伤和干细胞的形成这两个过程联系起来。即使联系起来，也是负面联系。2006 年，京都大学的山中伸弥教授发现当操纵细胞表达 4 个基因时，他能将动物的分化细胞重编程为多功能干细胞，2012  年，他因这个发现获得了诺贝尔奖。后来，人们发现在这个诱导过程中出现了 DNA 断链，人们认为这 DNA 断链是不利于干细胞的形成的，应该想办法避免。这个想法才是符合常识和直觉的，顾南的假设在我们看来是异想天开。顾南不觉得自己的想法离谱，在我们惊愕的时候，她已经开始作手用实验验证自己的假设了。   
+在研究工作中，出乎意料的情况发生的时候往往也是最令人兴奋的时候。难道抑制拓扑异构酶的功能可以增加植物形成干细胞的能力？这是个惊人但合理的假设。但顾南的思路更野，她提了另一个更惊世骇俗的可能。她说干细胞能力的增加或许和拓扑异构酶本身的功能无关，而是由于喜树碱造成的 DNA 损伤引起的。如之前所说，喜树碱结合拓扑异构酶后，拓扑异构酶能切割 DNA，但不再能将切断的 DNA 连起来，于是就造成了 DNA 链的断裂。喜树碱处理会导致 DNA 损伤，这是很多人都知道的，但没有一个人会提出 DNA 链的损伤会增加干细胞形成的能力，除了顾南。因为常识阻止我们把 DNA 损伤和干细胞的形成这两个过程联系起来；即使联系起来，也是负面联系。2006 年，京都大学的山中伸弥教授发现当操纵细胞表达 4 个基因时，他能将动物的分化细胞重编程为多功能干细胞，2012  年，他因这个发现获得了诺贝尔奖。后来，人们发现在这个诱导过程中出现了 DNA 断链，大家一般认为这 DNA 断链是不利于干细胞的形成的，应该想办法避免。这个想法是符合常识和直觉的，而顾南的假设在我们看来是异想天开。顾南不觉得自己的想法离谱，在我们惊愕的时候，她已经开始作手用实验验证自己的假设了。   
 
-检验这个假设的关键是要找到一种方法，它能不影响拓扑异构酶的功能，但却造成 DNA 链的断裂。这种方法其实不难找，很多化学药品都能造成 DNA 断裂，比如 bleomycin 和 zeocin，它们都是 DNA 损伤诱导剂。这些试剂能直接攻击 DNA 链，造成断链。由于这两个化学药品不和拓扑异构酶结合，一般认为它们不会直接影响拓扑异构酶的功能。于是顾南用这两种化学药品处理苔藓叶片，看是否能影响苔藓的再生能力。奇迹发生了，和喜树碱处理类似，bleomycin 和 zeocin 处理的苔藓叶片都在非损伤出长出了干细胞。这个实验结果强有力地支持了顾南的假设，即 DNA 损伤能促进植物干细胞的形成。在生物实验里，即便是看起来非常合理的假设，最后也常被实验给否掉，而顾南这个惊世骇俗的假设居然得到了实验支持。我们看着这个实验结果，都惊得合不上嘴。    
+检验这个假设的关键是要找到一种方法，它能不影响拓扑异构酶的功能，但却造成 DNA 链的断裂。这方法其实不难找，很多化学药品都能造成 DNA 断裂，比如 bleomycin 和 zeocin，它们都是 DNA 损伤诱导剂。这些试剂能直接攻击 DNA 链，造成断链。由于这两个化学药品不和拓扑异构酶结合，一般认为它们不会直接影响拓扑异构酶的功能。于是顾南用这两种化学药品处理苔藓叶片，看是否能影响苔藓的再生能力。奇迹发生了，和喜树碱处理类似，bleomycin 和 zeocin 处理的苔藓叶片在切口处和切口以外的部位都形成了干细胞。这个实验结果强有力地支持了顾南的假设，即 DNA 损伤能促进植物干细胞的形成。在生物实验里，即便是看起来非常合理的假设，最后也常被实验给否掉，而顾南这个惊世骇俗的假设居然得到了实验支持。我们看着这个实验结果，都惊得合不上嘴。    
 
-但顾南的神奇远未结束。接下来，顾南提出了新的问题：离体叶片本身能在切口处（有机械损伤）形成干细胞，DNA 链的断链增强了植物离体叶片形成干细胞的能力，那 DNA 损伤能否直接诱导未受机械损伤的苔藓植株形成干细胞呢？为了回答这个问题，顾南用 DNA 损伤诱导剂处理没有受到机械损伤的完整植株，观察它们身上是否能长出干细胞来。这是个非常艰难的过程，不过长话短说，经历了许多实验优化，在今井博士的帮助下，顾南成功了---她证实了 DNA 损伤不仅可以促进离体叶片的干细胞形成，还可以直接在完整的苔藓植株上诱导出干细胞来。百千年来，人们在生活实践中发现受到机械损伤的植物会再生，但除了机械损伤外，人们并不知道是否还有其它因素能诱导植物的再生，顾南的发现刷新了大家对植物再生的认知，也刷新了大家对 DNA 损伤的认知。        
+但顾南的神奇远未结束。接下来，顾南提出了新的问题：又机械损伤的离体叶片本身能在受损处形成干细胞，DNA 链的断链能增强植物离体叶片形成干细胞的能力，那 DNA 损伤能否直接诱导未受机械损伤的苔藓植株形成干细胞呢？为了回答这个问题，顾南用 DNA 损伤诱导剂处理没有受到机械损伤的完整植株，观察它们身上是否能长出干细胞来。这是个非常艰难的过程，不过长话短说，经历了许多实验优化，在今井博士的帮助下，顾南成功了---她证实了 DNA 损伤不仅可以促进离体叶片的干细胞形成，还可以直接在完整的苔藓植株上诱导出干细胞来。百千年来，人们在生活实践中发现受到机械损伤的植物会再生，但除了机械损伤外，人们并不知道是否还有其它因素能诱导植物的再生，顾南的发现刷新了大家对植物再生的认知，也刷新了大家对 DNA 损伤的认知。        
 
 有了这么精彩的研究结果，顾南的短期访问也变成了和我们实验室的长期合作研究。在接下来的几年里，顾南用美丽的彗星实验弄清楚了 DNA 损伤的出现和修复的动态过程；评估了损伤响应因子 ATM 和 ATR 在这个过程中其的作用，并确定了 ATR 是 DNA 损伤响应诱导再生这个过程中不可或缺的因子；还用实验明确了机械损伤诱导的再生和 DNA 损伤诱导的再生在分子机制上的异同。这些一环扣一环的清晰结果勾画出了 DNA 损伤诱导再生这个顾南新发现的现象的概貌，为这个新领域以后的研究打了坚实的基础。    
 
-DNA 损伤诱导可以诱导干细胞的形成，虽然我知道这个结论已经有几年的时间了，但现在想起来，依然有一种活久见的感觉。不得不感叹生物世界的神奇。所谓 DNA 损伤，其实在 DNA 分子层面发生的事情是一些列化学键的断开和再连接，“损伤”是人类给上的价值。我们通过有限的认知来给 DNA 分子上发生的事件评价好与坏，但顾南的发现告诉我们，事情并不如此简单---DNA 化学键的断开和再连接会开启细胞再生的历程。多年前，沃森和克里克发现生命的密码存在于 DNA 链中，我想，即使是他们怕也未必能想见，这个密码箱上裂个小口子居然能直接改变细胞的命运，让植物重启新生。这是如何一步一步发生的，让我们期待顾南未来的工作吧。     
+DNA 损伤诱导可以诱导干细胞的形成，虽然我知道这个结论已经有几年的时间了，但现在想起来，依然有一种活久见的感觉。不得不感叹生物世界的神奇。所谓 DNA 损伤，其实在 DNA 分子层面发生的事情是一些列化学键的断开和再连接，“损伤”是人类给上的价值。我们通过有限的认知来给 DNA 分子上发生的事件评价好与坏，但顾南的发现告诉我们，事情并不如此简单---DNA 化学键的断开和再连接会开启细胞命运转变的历程。多年前，沃森和克里克发现生命的密码存在于 DNA 链中，我想，即使是他们怕也未必能想见，这个密码箱上裂个小口子居然能直接改变细胞的命运，让植物重启新生。这是如何一步一步发生的，让我们期待顾南未来的工作吧。     
 
 ------------
 
